fixed gap between header and nav with css

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -62,6 +62,6 @@ h3 {
 
 .home-header {
   color: white;
-  margin-top: -44px;
+  margin-top: -50px;
   padding-bottom: 100px;
 }
